--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="assets/js/app.js"></script>
 	<title>New York Times App</title>
 </head>
 <body>
