--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
     <div class="form-group">
       <div class="col-lg-10 col-lg-offset-2">
-        <button type="submit" class="btn btn-default">Search</button>
+        <button id="search-term" class="btn btn-default">Search</button>
         <button type="reset" class="btn btn-primary">Clear Results</button>
       </div>
     </div>
